# research_mcp

./: README.md  llms_mcp.txt  pyproject.toml  requirements.txt  schema.py  script.py
src/exa/: .gitignore  README.md  __init__.py  run.py  search_tool.py  server.py
src/research_mcp/: __init__.py  __main__.py  db.py  dspy_init.py  models.py  query_generation.py  rate_limiter.py  research_service.py  returns_docs.md  schemas.py  server.py  summarize.py  tracing.py
src/research_mcp/stubs/: cleantext.pyi
src/research_mcp/word_ids/: __init__.py
