[project]
name = "research-mcp"
version = "0.1.0"
description = "A MCP server project"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiosqlite>=0.20.0",
    "braintrust>=0.0.173",
    "clean-text[gpl]>=0.6.0",
    "dspy>=2.5.40",
    "exa-py>=1.7.0",
    "fastapi>=0.115.5",
    "httpx>=0.27.2",
    "mcp>=1.0.0",
    "pip>=24.3.1",
    "python-dotenv>=1.0.1",
    "python-multipart>=0.0.17",
    "rich>=13.9.4",
    "sqlalchemy[asyncio]>=2.0.36",
    "stackprinter>=0.2.12",
    "uvicorn>=0.32.1",
]


[[project.authors]]
name = "Darin"
email = "86675935+darinkishore@users.noreply.github.com"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
research-mcp = "research_mcp:main"

[tool.ruff]
# Target Python 3.11
target-version = "py311"

# Line length of 100 characters
line-length = 100

# Enable select rules
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "SIM", # flake8-simplify
    "RUF",
]

# Ignore specific rules
extend-ignore = [
    "B008", # Do not perform function calls in argument defaults
]

[tool.ruff.format]
quote-style = "single"

[tool.ruff.isort]
lines-after-imports = 2

[dependency-groups]
dev = ["pytest>=8.3.3", "pytest-asyncio>=0.24.0"]
